--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>商品展示</title>
+  <title>二手物品</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>商品展示表</h1>
+  <h1>二手物品列表</h1>
   <table>
     <thead>
       <tr>
         <th>图片</th>
-        <th>说明</th>
+        <th>名称</th>
         <th>标价</th>
         <th>备注</th>
       </tr>
