--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>二手列表 微信：espresso51867</h1>
+  <h3><a href="https://jeremy23333.github.io/itemlist/">https://jeremy23333.github.io/itemlist/</a></h3>
   <table>
     <thead>
       <tr>
